--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,12 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>3.0.8</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<finalName>verademo</finalName>
