Passing sca_output file to script instead of list of vulnerabilities

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,4 +30,4 @@ steps:
 
 - template : CreateWorkItems.yml
   parameters:
-    sca_output: sca_output.json
+    vulnerabilities: jq '.records[0].vulnerabilities' sca_output.json
