--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
 - task: CmdLine@2
   name: ParseJson
   inputs:
-    script: '$TEMP_OUTPUT=`jq .records[0].vulnerabilities sca_output.json`'
+    script: 'TEMP_OUTPUT=`jq .records[0].vulnerabilities sca_output.json`'
     
 - powershell: Write-Host '##vso[task.setvariable variable=vulnerabilities,isOutput=true]$TEMP_OUTPUT'
 - script: echo $(vulnerabilities)
