--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,9 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables: 
+  Vulnerabilities: ''
+
 steps:
 - task: Maven@3
   inputs:
@@ -27,9 +30,10 @@ steps:
     $SCA_JSON = Get-Content 'sca_output.json'
     $TEMP_OUTPUT = $SCA_JSON | ConvertFrom-Json
     $TEMP_OUTPUT = $TEMP_OUTPUT.records.vulnerabilities
-    $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json
+    $TEMP_OUTPUT = $TEMP_OUTPUT | ConvertTo-Json -Depth 10
     Write-Host "##vso[task.setvariable variable=vulnerabilities]$TEMP_OUTPUT"
     echo Vulnerabilities on temp: $TEMP_OUTPUT
+    echo "##vso[task.setvariable variable=Vulnerabilities]$TEMP_OUTPUT"  
 
 - script: |
-    echo Vulnerabilties outside: $TEMP_OUTPUT
+    echo Vulnerabilties outside: $(Vulnerabilities)
