--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,4 +39,4 @@ steps:
   name: EchoVulnerabilities
   inputs:
     script: | 
-      echo Vulnerabilties outside: $(SaveToVulnerabilities.Vulnerabilities)
+      echo Vulnerabilties outside: "$(SaveToVulnerabilities.Vulnerabilities)"
