--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,13 @@ steps:
       $SCA_JSON = $SCA_JSON | ConvertFrom-Json
       $SCA_JSON = $SCA_JSON.records.vulnerabilities
       $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10 -Compress
-      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
+      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON]$SCA_JSON"
+
+- task: PowerShell@2
+  name: OutputJson
+  inputs:
+    targetType: 'inline'
+    script: 'echo $(ReadJsonFile.VULNERABILITIES_AS_JSON)'
 
 - template : CreateWorkItems.yml
   parameters:
