--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -23,24 +23,52 @@ steps:
     script: |
       $SCA_JSON = Get-Content ${{ parameters.json_file }}
       $SCA_JSON = $SCA_JSON | ConvertFrom-Json
-      $SCA_JSON = $SCA_JSON.records.vulnerabilities
-      $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10 -Compress
-      $SCA_JSON = $SCA_JSON.Replace("'", "")
-      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
+      $VULNERABILITIES_JSON = $SCA_JSON.records.vulnerabilities
+      $VULNERABILITIES_JSON = $VULNERABILITIES_JSON | ConvertTo-Json -Depth 10 -Compress
+      $VULNERABILITIES_JSON = $VULNERABILITIES_JSON.Replace("'", "")
+      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$VULNERABILITIES_JSON"
+      $VULNERABLE_METHODS_JSON = $SCA_JSON.records.vulnerabilities
+      $VULNERABLE_METHODS_JSON = $VULNERABLE_METHODS_JSON | ConvertTo-Json -Depth 10 -Compress
+      $VULNERABLE_METHODS_JSON = $VULNERABLE_METHODS_JSON.Replace("'", "")
+      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$VULNERABLE_METHODS_JSON"
       
 - task: CmdLine@2
   name: CreateTickets
   env:
     API_CREDENTIALS: $(AZURE_API_CREDENTIALS)
     VULNERABILITIES_AS_JSON:  $(ReadJsonFile.VULNERABILITIES_AS_JSON)
+    VULNERABLE_METHODS_AS_JSON:  $(ReadJsonFile.VULNERABLE_METHODS_AS_JSON)
   inputs:
     script: |      
       createApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/workitems/"'$'"${{ parameters.issue_type }}?api-version=6.0"
       getWorkItemApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/wiql?api-version=6.1-preview.2"
       Authentication="anything:$API_CREDENTIALS"
       
-      sca_json="$VULNERABILITIES_AS_JSON"
-      for encodedVulnerability in $(echo "${sca_json}" | jq -r '.[] | @base64'); do
+      vulnerableMethods=[]
+      for vulnerableMethod in $(echo "${VULNERABLE_METHODS_AS_JSON} | jq -r '.[] | @base64'); do
+        vulnerableMethodAsJson=$(echo "$vulnerableMethod" | base64 --decode)
+        ref=$( jq -r  '._links.ref' <<< "${vulnerableMethodAsJson}" )
+        calls=[]
+        for callAsJson in $(echo "${vulnerableMethodAsJson}" | jq -r '.calls[] | @base64'); do
+          calledClass=$( jq -r  '.method.className' <<< "${vulnerabilityAsJson}" )
+          calledMethod=$( jq -r  '.method.methodName' <<< "${vulnerabilityAsJson}" ) 
+          methodDescriptor=$( jq -r  '.method.descriptor' <<< "${vulnerabilityAsJson}" ) 
+          
+          
+          call={}
+          call.calledClass=$calledClass
+          call.calledMethod=$calledMethod
+          call.calledClass=$methodDescriptor
+          call.callChain=""
+          calls+=($call)
+        done
+        VulnerableMethod={}
+        VulnerableMethod.ref=$ref
+        VulnerableMethod.calls=$calls
+        vulnerableMethods+=($VulnerableMethod)
+      done
+      
+      for encodedVulnerability in $(echo "${VULNERABILITIES_AS_JSON}" | jq -r '.[] | @base64'); do
         vulnerabilityAsJson=$(echo "$encodedVulnerability" | base64 --decode)
         
         title=$( jq -r  '.title' <<< "${vulnerabilityAsJson}" ) 
@@ -105,8 +133,17 @@ steps:
         existingWorkItems=$( jq -c  '.workItems' <<< "${workItemQueryResult}" )
         
         if [[ "$existingWorkItems" = "" ||  "$existingWorkItems" = "[]" ]];  then
-          description=$( tr '"' '\"' <<< "<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters.
-          _Database_Link_Name }}</a></li></ul>" )
+          description=$( tr '"' '\"' <<< "<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Library_Source_Name }}: $librarySource</li><li>${{ parameters.Vulnerable_Library_Name }}: $libraryName</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li><a href=$vulnerabilityLink>${{ parameters._Database_Link_Name }}</a></li>" )
+          reference=$( jq -c  '.libraries[0]._links.ref' <<< "${vulnerabilityAsJson}" )
+          reference=$( tr -d '"' <<< $reference )
+          
+          for existingVulnerableMethod in vulnerableMethods; do 
+            if [[ "$existingVulnerableMethod.ref" = "$reference" ]];  then
+              description="$description<li><h2>Vulnerable Methods</h2><h3>$calls</h3></li>"
+            fi
+          done
+          
+          description="$description</ul>"
           Body='[{
             "op": "add",
             "path": "/fields/System.Title",
